style: fixed horisontal scroll on smaller screens

--- a/styles/base/reset.css
+++ b/styles/base/reset.css
@@ -11,7 +11,6 @@
 * {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 /* Set up base document settings */
